--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
+	<script type="text/javascript" src="scripts/app.js"></script>
 	<script></script>
 	<script></script>
 	<script></script>
