added container view and toolbar, edit panel and preview panel views

--- a/app/index.html
+++ b/app/index.html
@@ -2,14 +2,14 @@
 <head>
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
 	<script type="text/javascript" src="scripts/app.js"></script>
-	<script></script>
-	<script></script>
-	<script></script>
+	<script type="text/javascript" src="scripts/controllers/containerCtrl.js"></script>
 	<body>
 		
 	</body>
 </head>
-<body>
+<body ng-app="ngEditApp">
 	<h1>Welcome to ng-edit</h1>
+
+	<div ng-include="'views/container.html'" ng-controller="xxx"></div>
 </body>
 </html>
