added app.css and style for edit-area textarea

--- a/app/index.html
+++ b/app/index.html
@@ -3,9 +3,9 @@
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
 	<script type="text/javascript" src="scripts/app.js"></script>
 	<script type="text/javascript" src="scripts/controllers/containerCtrl.js"></script>
-	<body>
-		
-	</body>
+	<script type="text/javascript" src="scripts/directives/editArea.js"></script>
+	<link rel="stylesheet" href="styles/app.css">
+
 </head>
 <body ng-app="ngEditApp">
 	<h1>Welcome to ng-edit</h1>
