added textModel service, and started to implement Observer pattern to send info to controllers

--- a/app/index.html
+++ b/app/index.html
@@ -1,9 +1,22 @@
 <html>
 <head>
+
+	<!--Angular -->
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
+
+	<!--App module definition !! Must me included before all other scripts-->
 	<script type="text/javascript" src="scripts/app.js"></script>
+
+	<!-- Services !!Must be included before scripts using services -->
+	<script type="text/javascript" src="scripts/services/textModel.js"></script>
+
+	<!-- Controllers -->
 	<script type="text/javascript" src="scripts/controllers/containerCtrl.js"></script>
+
+	<!-- Directives -->
 	<script type="text/javascript" src="scripts/directives/editArea.js"></script>
+
+	<!-- Style sheets -->
 	<link rel="stylesheet" href="styles/app.css">
 
 </head>
