added controllers for edit and preview panels, and implemented Observer pattern to broadcast a model change to registered controllers

--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,8 @@
 
 	<!-- Controllers -->
 	<script type="text/javascript" src="scripts/controllers/containerCtrl.js"></script>
+	<script type="text/javascript" src="scripts/controllers/editPanelCtrl.js"></script>
+	<script type="text/javascript" src="scripts/controllers/previewPanelCtrl.js"></script>
 
 	<!-- Directives -->
 	<script type="text/javascript" src="scripts/directives/editArea.js"></script>
