started to work on the page organisation

--- a/app/index.html
+++ b/app/index.html
@@ -25,6 +25,6 @@
 <body ng-app="ngEditApp">
 	<h1>Welcome to ng-edit</h1>
 
-	<div ng-include="'views/container.html'" ng-controller="xxx"></div>
+	<div ng-include="'views/container.html'" ng-controller="containerCtrl"></div>
 </body>
 </html>
