--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
 
 	<!-- Controllers -->
 	<script type="text/javascript" src="scripts/controllers/containerCtrl.js"></script>
+
 	<script type="text/javascript" src="scripts/controllers/editPanelCtrl.js"></script>
 	<script type="text/javascript" src="scripts/controllers/previewPanelCtrl.js"></script>
 
@@ -19,7 +20,8 @@
 	<script type="text/javascript" src="scripts/directives/editArea.js"></script>
 
 	<!-- Style sheets -->
-	<link rel="stylesheet" href="styles/app.css">
+	<link rel="stylesheet" type="text/css" href="styles/app.css">
+		
 
 </head>
 <body ng-app="ngEditApp">
