communication between V and C for toolbar ok

--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,8 @@
 	<!-- Controllers -->
 	<script type="text/javascript" src="scripts/controllers/containerCtrl.js"></script>
 
+	<script type="text/javascript" src="scripts/controllers/toolBarCtrl.js"></script>
+
 	<script type="text/javascript" src="scripts/controllers/editPanelCtrl.js"></script>
 	<script type="text/javascript" src="scripts/controllers/previewPanelCtrl.js"></script>
 
