working on text preview

--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,7 @@
 
 	<!-- Directives -->
 	<script type="text/javascript" src="scripts/directives/editArea.js"></script>
+	<script type="text/javascript" src="scripts/directives/previewDisplay.js"></script>
 
 	<!-- Style sheets -->
 	<link rel="stylesheet" type="text/css" href="styles/app.css">
