--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 
 	<!--Angular -->
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
-	<script type="text/javascript" src="../bower_components/angular-sanitize/angular-sanitize.min.js"></script>
+	<script type="text/javascript" src="/bower_components/angular-sanitize/angular-sanitize.min.js"></script>
 
 	<!--App module definition !! Must me included before all other scripts-->
 	<script type="text/javascript" src="scripts/app.js"></script>
